# slap2-py

./: README.md  gen_images.ipynb  pyproject.toml
src/slap2_py/: __init__.py
src/slap2_py/core/: ExSum.py  __init__.py  xarr_summ.py  xsum.py  xsum_df.py
src/slap2_py/hf/: __init__.py  core.py  io.py
src/slap2_py/img/: __init__.py  utils.py
src/slap2_py/plot/: __init__.py  _pcolor_mesh_raster.py  activity.py  ev.py  images.py  main.py  style.py
src/slap2_py/plot/style/: slap_fig.mplstyle  slap_im.mplstyle
src/slap2_py/utils/: __init__.py  drec.py  gen.py  hfive.py  movie.py  syn.py
