[project]
name = "slap2-py"
version = "0.1.0"
description = "Python functionality for working with SLAP2 data and ExperimentSummaries"
readme = "README.md"
authors = [
    { name = "Kort Driessen", email = "driessenkort@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.6",
    "mat73>=0.65",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "polars>=1.32.3",
    "ruff>=0.13.0",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "tifffile>=2025.8.28",
    "xarray>=2025.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Build one wheel that contains both import packages.
[tool.hatch.build.targets.wheel]
packages = [
  "src/slap2_py",
]

# (Optional but nice for source distributions)
[tool.hatch.build.targets.sdist]
include = [
  "src/slap2_py/**",
  "README.md",
  "pyproject.toml",
]

# -------------------------------- FORMATTING AND LINTING -------------------------------

[tool.black]
# Accept all Black defaults (88 col, etc.); line-length shown for clarity only.
line-length = 88
target-version = ["py312"]  # adjust to your project min version, e.g., "py310"

[tool.ruff]
line-length = 88
target-version = "py312"
unsafe-fixes = true
preview = true

[tool.ruff.lint]
# Sensible, low-noise rule set; add more later as you like.
select = ["E", "F", "I", "B", "UP"]  # pycodestyle, pyflakes, isort, bugbear, pyupgrade

[tool.ruff.lint.isort]
# Let Ruff handle import ordering; set your package name(s) here:
known-first-party = ["package_name"]
