[project]
name = "slap2-py"
version = "0.1.0"
description = "Python functionality for working with SLAP2 data and ExperimentSummaries"
readme = "README.md"
authors = [
    { name = "Kort Driessen", email = "driessenkort@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mat73>=0.65",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "polars>=1.32.3",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "tifffile>=2025.8.28",
    "xarray>=2025.8.0",
]
# Dev-only deps: tools + notebooks.
# uv supports groups; install with: uv sync --group dev
[dependency-groups]
dev = [
    "ruff>=0.13.0",
    "ty>=0.0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Build one wheel that contains the import package.
[tool.hatch.build.targets.wheel]
packages = [
  "src/slap2_py",
]

# (Optional but nice for source distributions)
[tool.hatch.build.targets.sdist]
include = [
  "src/slap2_py/**",
  "README.md",
  "pyproject.toml",
]

# ------------------------------ RUFF (lint + format) ------------------------------
[tool.ruff]
line-length = 88
target-version = "py312"

# If you want Ruff to run both linting and formatting in "modern" mode:
# (preview is optional; keep it off if you want fewer surprises)
preview = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# You can add more later (e.g. "N", "SIM", "C4", "RUF", etc.)

[tool.ruff.lint.isort]
known-first-party = ["slap2_py"]

[tool.ruff.format]
# Ruff formatter is the Black replacement (no Black config needed).
# Keep default behavior unless you have a reason to tweak.
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ------------------------------ TY (type checker + LSP) ------------------------------
[tool.ty]
# You can keep this section minimal; ty will auto-discover a lot.
# Add rules as you start enforcing things.

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
# Optional: helpful to be explicit in src-layout repos.
root = ["./src"]

# Example: ignore (or warn/error) specific rules if needed:
# [tool.ty.rules]
# possibly-unresolved-reference = "warn"
